# helena-ai

./: .env.example  .gitignore  API.md  README.md  angular.json  capacitor.config.ts  chat_cli.py  cli.py  cli_prompt.py  cli_select.py  clipboard_image.py  env_file.py  goal_cli.py  helena  helena.cmd  install.ps1  install.sh  ionic.config.json  local_models.py  ngsw-config.json  ollama_ctl.py  package-lock.json  package.json  pyproject.toml  run.py
app/: __init__.py  audit.py  config.py  desktop_notify.py  extensions.py  notifications_dispatcher.py  realtime.py
app/agenda/: __init__.py  notify_body.py  routine_scheduler.py  scan.py  scheduler.py  timeutil.py
app/agent/: __init__.py  agenda_tools.py  automations_tools.py  browsers.py  command_library.py  context.py  dashboard_tools.py  (+21 more)
desktop-dashboard/: main.js  package.json
src/: global.scss  index.html  manifest.webmanifest
tests/: conftest.py  test_auth.py  test_automations.py  test_browsers.py  test_chat_cli.py  test_cli_prompt.py  test_clipboard_image.py  test_dashboard_blueprint.py  test_dashboard_tools.py  test_decision.py  test_desktop_notify.py  test_desktop_task.py  test_env_file.py  test_federation.py  test_federation_ai_reply.py  test_federation_initiate.py  test_library.py  test_llm_provider.py  test_local_models.py  test_memory.py  test_network_tools.py  test_ollama_client.py  test_ollama_ctl.py  test_panic_audit.py  test_permissions.py  test_recurrence.py  test_sandbox.py  test_scheduled_routines.py  test_settings_blueprint.py  test_ssh_tool.py  test_sudo.py  test_tool_gating.py  test_wipe.py
(+82 files in other folders)
