[project]
name = "helena-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-jwt-extended>=4.7.4",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=2.10.0",
    "mss>=9.0.0",
    "openpyxl>=3.1.5",
    "prompt-toolkit>=3.0.43",
    "psutil>=6.0.0",
    "pyautogui>=0.9.54",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.31",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
